fixed search mask and minor layout issues

--- a/save/webpages/css/dszv.css
+++ b/save/webpages/css/dszv.css
@@ -256,3 +256,7 @@ ul {
 .viewer .btn {
     padding: 6px 10px;
 }
+
+label {
+  font-weight: normal;
+}
