--- a/save/webpages/mir-layout/scss/variables.scss
+++ b/save/webpages/mir-layout/scss/variables.scss
@@ -8,7 +8,7 @@ $brand-warning:      rgb(255, 153, 0);
 $brand-danger:       #E6432E;
 
 $font-family-sans-serif:    "Lucida Sans Unicode",sans-serif;
-$font-size-base:            14px;
+$font-size-base:            12px;
 
 $font-size-h1:      floor(($font-size-base * 2));
 $font-size-h2:      floor(($font-size-base * 1.7));
